<resources>
    <string name="app_name">掌中宝</string>
    <string name="common_ok">确定</string>
    <string name="common_cancel">取消</string>
    <string name="common_search">查询</string>
    <string name="common_please_enter_the_useful_criteria">请输入有效的查询条件！</string>
    <string name="common_please_enter_the_contract_id">"请输入业务编号！</string>
    <string name="common_sorry_not_date">抱歉，暂无数据...</string>
    <string name="common_not_date">已加载完所有数据！</string>
    <string name="common_refresh_failed">刷新失败！</string>
    <string name="common_refresh_success">刷新成功！</string>
    <string name="common_home">首页</string>
    <string name="common_reminder">温馨提示</string>
    <string name="common_financialAssistant">财务助手</string>
    <string name="common_toolbar">工具箱</string>
    <string name="common_message_reminder">通知提醒</string>
    <string name="common_message_reminder_import">进口通知</string>
    <string name="common_message_reminder_export">出口通知</string>
    <string name="common_message_reminder_guarantee">保函通知</string>
    <string name="common_message_reminder_factoring">保理通知</string>
    <string name="common_message_reminder_forward">远期通知</string>
    <string name="common_boc_analyse">中银分析</string>
    <string name="common_business_query">业务查询</string>
    <string name="common_business_query_please_enter_the_contract_id">请输入业务编号查询</string>
    <string name="activity_business_query_end_time_wrong">结束时间不能小于等于开始时间，请重新选择结束时间！</string>
    <string name="activity_business_query_end_time_wrong2">结束时间不能大于当前时间，请重新选择结束时间！</string>
    <string name="activity_business_query_end_time_wrong3">开始时间不能大于等于当前时间，请重新选择开始时间！</string>
    <string name="activity_business_query_import">进口业务</string>
    <string name="activity_business_query_import_open">进口信用证开立查询</string>
    <string name="activity_business_query_import_acceptance">进口信用证承兑业务查询</string>
    <string name="activity_business_query_import_order">进口信用证到单查询</string>
    <string name="activity_business_query_import_collection_order">进口代收到单查询</string>
    <string name="activity_business_query_export">进口信用证到单查询</string>
    <string name="activity_business_query_guarantee">保函业务</string>
    <string name="activity_business_query_factoring_and_financing">保理及供应链融资业务</string>
    <string name="activity_business_query_criteria">查询条件</string>
    <string name="activity_business_query_start_date">开始时间</string>
    <string name="activity_business_query_end_date">结束时间</string>
    <string name="activity_business_query_contract_id">业务编号</string>
    <string name="activity_business_query_result_title">合同查询</string>
    <string name="activity_business_query_no_date_for_this_contractId">中，查询无结果，请输入有效的业务编号！</string>
    <string name="activity_business_query_no_date_for_this_time">中，查询无结果，请输入有效的起止时间！</string>
    <string name="activity_business_query_no_date_for_this_time_and_contract_id">中，查询无结果，中，查询无结果，请输入有效的起止时间或业务编号！</string>
    <string name="activity_message_filter_condition0">全部</string>
    <string name="activity_message_import_filter_condition1">进口信用证开立通知</string>
    <string name="activity_message_import_filter_condition2">进口信用证到单通知</string>
    <string name="activity_message_import_filter_condition3">进口信用证即期付款提示</string>
    <string name="activity_message_import_filter_condition4">进口信用证承兑到期付款提示</string>
    <string name="activity_message_import_filter_condition5">进口贸易金融业务到期提示</string>
    <string name="activity_message_import_filter_condition6">进口代收到单通知</string>
    <string name="activity_message_export_filter_condition1">出口信用证开立通知</string>
    <string name="activity_message_export_filter_condition2">出口信用证结算通知书</string>
    <string name="activity_message_export_filter_condition3">出口结汇通知书</string>
    <string name="activity_message_export_filter_condition4">出口信用证承兑到期付款提示</string>
    <string name="activity_message_export_filter_condition5">出口贸易业务到期提示</string>
    <string name="activity_message_guarantee_filter_condition1">保函通知</string>
    <string name="activity_message_guarantee_filter_condition2">保函收费通知</string>
    <string name="activity_message_guarantee_filter_condition3">保函上传通知</string>
    <string name="activity_message_guarantee_filter_condition4">融资性担保定义通知</string>
    <string name="activity_message_factoring_filter_condition1">保理商签发收账通知</string>
    <string name="activity_message_factoring_filter_condition2">保理业务确认函提示</string>
    <string name="activity_message_factoring_filter_condition3">商业保理行业管理提示</string>
    <string name="activity_message_factoring_filter_condition4">国际保理业务通知</string>
    <string name="activity_message_forward_filter_condition1">远期外汇通知</string>
    <string name="activity_message_forward_filter_condition2">外汇资金业务通知</string>
    <string name="activity_message_forward_filter_condition3">代理结售汇业务通知</string>
    <string name="activity_message_forward_filter_condition4"> 代客外汇理财业务提示</string>
    <string name="activity_message_forward_filter_condition5"> 代客外汇风险管理提示</string>
</resources>
